--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,8 +120,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="9dp">
+        android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -130,7 +129,7 @@
         <Button
             android:id="@+id/btnLogInS"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:text=" Log in here"
             android:textColor="#3F51B5"
             android:background="#DCDCDD"
@@ -141,5 +140,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign up"
-        android:textSize="25dp"/>
+        android:textSize="25dp" />
 </LinearLayout>
