--- a/app/src/main/res/layout/activity_games_list.xml
+++ b/app/src/main/res/layout/activity_games_list.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:weightSum="100">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,5 +51,25 @@
     <ListView
         android:id="@+id/games_queue_lst"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="350dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="30dp"
+            android:text="New game"
+            android:id="@+id/btnNewGame"/>
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="30dp"
+            android:text="Log out"
+            android:id="@+id/btnLogOut"/>
+    </LinearLayout>
 </LinearLayout>
