--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="   Phone Number"
+        android:text="   Userame"
         android:layout_marginTop="18dp"
         android:textSize="25sp"
         />
     <EditText
-        android:id="@+id/etPhoneNumber"
+        android:id="@+id/etUserNameS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18dp"
@@ -94,47 +94,13 @@
         android:layout_marginBottom="2dp"
         android:background="#FFFFFF"/>
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/tvLogin"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="18dp"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <Button
-            android:id="@+id/btnAddImage"
-            android:layout_width="0dp"
-            android:layout_height="90dp"
-            android:layout_weight="1"
-            android:text="Add Image"
-            android:textSize="30sp" />
-
-        <ImageView
-            android:id="@+id/ivImage"
-            android:layout_width="0dp"
-            android:layout_height="85dp"
-            android:layout_weight="1"
-            android:background="#FFFFFF"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Already a member?"
-            android:layout_marginLeft="120dp"/>
-        <Button
-            android:id="@+id/btnLogInS"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text=" Log in here"
-            android:textColor="#3F51B5"
-            android:background="#DCDCDD"
-            android:textAllCaps="false"/>
-    </LinearLayout>
+        android:text="Already a member? Login here"
+        android:layout_marginLeft="120dp"/>
     <Button
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
